--- a/3. Model_Building_Final.ipynb
+++ b/3. Model_Building_Final.ipynb
@@ -3165,7 +3165,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "filename = 'ModelRFC.pkl'\n",
+    "filename = 'ModelDTC.pkl'\n",
     "pickle.dump(Model_RFC,open(filename,'wb'))"
    ]
   },
